# cutealarm

./: CMakeLists.txt  README.md  config.h.in
src/: cutealarmtray.cpp  cutealarmtray.h  main.cpp  settings.ui  settingsdialog.cpp  settingsdialog.h
